<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityInstructions"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:background="@drawable/custom_rectangle_discussion_mode"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="20sp"
            android:text="@string/instructions"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:textStyle="italic"
                android:background="@drawable/custom_rectangle_black"
                android:text="@string/video_tutorial_link"
                android:id="@+id/txtSeeVideoTutorial"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/custom_rectangle_black"
                android:text="@string/copy_link"
                android:id="@+id/txtCopyVideoTutorialLink"/>

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rectangle_discussion_mode">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/rules_of_meal_calculation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/instruction_rules_of_meal_calculation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/move_under_calculation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/instruction_move_to_cur_calc"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/announcement"/>

            <TextView

                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_announcement"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/manage_today_meal"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_todays_meal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/reactivate_meal"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_reactivate_meal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/market_lists"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_discussion"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/public_message"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_public_message"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/market_note_member"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_market_note"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/update_mpdph"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_update_mpdph"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/update_meal"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_update_meal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/edit_member_info"/>

            <TextView
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_edit"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>